--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.8.2",
     "paypal": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
