Update connection api frontend and backend

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
 VITE_PAYPAL_CLIENT_ID = AQht59rTJLHbkDofXisUgCok8XVa6IcwfZ4TEM6CVpK1x6w-fkXY1iBRCfW_e5ga8wxRP30U-O8tztAa
+VITE_BACKEND_URL=http://localhost:9000
