--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@paypal/react-paypal-js": "^8.8.2",
+    "@reduxjs/toolkit": "^2.6.0",
+    "axios": "^1.8.2",
     "paypal": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "sonner": "^2.0.0"
   },
